// Vitest Snapshot v1

exports[`SelectionFilters renders correctly > Rendered list without any facet selected 1`] = `
[
  <p
    className="menu-label"
  >
    Search
  </p>,
  <ul
    className="menu-list"
  >
    <li>
      <button
        className="button is-small is-fullwidth"
        onClick={[Function]}
        style={
          {
            "cursor": "pointer",
          }
        }
      >
        <span
          className="is-capitalized"
        >
          instances
           (
          3
          )
        </span>
        <expandIcon
          expanded={true}
        />
      </button>
      <ul>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            foo
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            bar
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            zee
          </label>
        </li>
      </ul>
    </li>
    <li>
      <button
        className="button is-small is-fullwidth"
        onClick={[Function]}
        style={
          {
            "cursor": "pointer",
          }
        }
      >
        <span
          className="is-capitalized"
        >
          statuses
           (
          2
          )
        </span>
        <expandIcon
          expanded={true}
        />
      </button>
      <ul>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            succeeded
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            failed
          </label>
        </li>
      </ul>
    </li>
    <li>
      <button
        className="button is-small is-primary is-fullwidth"
        data-testid="reset-search-btn"
        onClick={[Function]}
      >
        Reset Filters 
        <span
          className="delete"
        />
      </button>
    </li>
  </ul>,
]
`;

exports[`SelectionFilters renders with selection > Rendered list with foo instance selected 1`] = `
[
  <p
    className="menu-label"
  >
    Search
  </p>,
  <ul
    className="menu-list"
  >
    <li>
      <button
        className="button is-small is-fullwidth"
        onClick={[Function]}
        style={
          {
            "cursor": "pointer",
          }
        }
      >
        <span
          className="is-capitalized"
        >
          instances
           (
          3
          )
        </span>
        <expandIcon
          expanded={true}
        />
      </button>
      <ul>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={true}
              onChange={[Function]}
              type="checkbox"
            />
             
            foo
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            bar
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            zee
          </label>
        </li>
      </ul>
    </li>
    <li>
      <button
        className="button is-small is-fullwidth"
        onClick={[Function]}
        style={
          {
            "cursor": "pointer",
          }
        }
      >
        <span
          className="is-capitalized"
        >
          statuses
           (
          2
          )
        </span>
        <expandIcon
          expanded={true}
        />
      </button>
      <ul>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            succeeded
          </label>
        </li>
        <li>
          <label
            className="checkbox"
          >
            <input
              defaultChecked={false}
              onChange={[Function]}
              type="checkbox"
            />
             
            failed
          </label>
        </li>
      </ul>
    </li>
    <li>
      <button
        className="button is-small is-primary is-fullwidth"
        data-testid="reset-search-btn"
        onClick={[Function]}
      >
        Reset Filters 
        <span
          className="delete"
        />
      </button>
    </li>
  </ul>,
]
`;
